--- a/src/site/xdoc/installation.xml.vm
+++ b/src/site/xdoc/installation.xml.vm
@@ -6,70 +6,119 @@
     </properties>
 
     <body>
-
-        <section name="Installation">
-
-            <subsection name="Manual Installation">
-
-                <p>There are two files that should be made available to those wishing
-                    to use the IDS client:
-                </p>
-                <dl>
-                    <dt>
-                        <a href="${repoUrl}/org/icatproject/ids.client/${project.version}/ids.client-${project.version}.jar">ids.client-${project.version}.jar</a>
-                    </dt>
-                    <dd>the client library which the user should add to the
-                        classpath.
-                    </dd>
-                     <dt>
-                        <a href="${repoUrl}/org/icatproject/ids.client/${project.version}/ids.client-${project.version}-sources.jar">ids.client-${project.version}-sources.jar</a>
-                    </dt>
-                    <dd>the source of the client library to which which the user may wish to refer.
-                    </dd>
-
-                </dl>
-            </subsection>
-
-            <subsection name="Using the client from maven">
-                <p>It is expected that most people will express their dependency upon the icat.client by means of a maven pom file. To do this the
-                    user
-                    needs to define the repository and express the dependency as indicated in the snippet below:
-                </p>
-
-                <code>
-                    &lt;repositories&gt;
-                    <br />
-                    &#160;&#160;&#160;&lt;repository&gt;
-                    <br />
-                    &#160;&#160;&#160;&#160;&#160;&#160;&lt;id&gt;ICAT Repo&lt;/id&gt;
-                    <br />
-                    &#160;&#160;&#160;&#160;&#160;&#160;&lt;url&gt;http://www.icatproject.org/mvn/repo&lt;/url&gt;
-                    <br />
-                    &#160;&#160;&#160;&lt;/repository&gt;
-                    <br />
-                    &#160;&#160;&#160;...
-                    <br />
-                    &lt;/repositories&gt;
-                    <br />
-                    <br />
-                    &lt;dependencies&gt;
-                    <br />
-                    &#160;&#160;&#160;&lt;dependency&gt;
-                    <br />
-                    &#160;&#160;&#160;&#160;&#160;&#160;&lt;groupId&gt;org.icatproject&lt;/groupId&gt;
-                    <br />
-                    &#160;&#160;&#160;&#160;&#160;&#160;&lt;artifactId&gt;ids.client&lt;/artifactId&gt;
-                    <br />
-                    &#160;&#160;&#160;&#160;&#160;&#160;&lt;version&gt;${project.version}&lt;/version&gt;
-                    <br />
-                    &#160;&#160;&#160;&lt;/dependency&gt;
-                    <br />
-                    &#160;&#160;&#160;...
-                    <br />
-                    &lt;/dependencies&gt;
-                </code>
-            </subsection>
+        <section name="Introduction">
+            <p>The setup script only installs the python client as there is no standard place to install jar files.</p>
         </section>
+
+        <section name="Installation of python client using the setup script">
+            <p>You must be logged in with write access to the Python site packages - which normally means as root.</p>
+
+
+            <subsection name="Compatibility">This will work with an IDS version of 1.0.0 or greater.</subsection>
+
+            <subsection name="Prerequisites">
+
+                <ul>
+
+                    <li>
+                        The ids client distribution:
+                        <a href="${repoUrl}/org/icatproject/ids.server/${project.version}/ids.client-${project.version}-distro.zip">ids.client-${project.version}-distro.zip</a>
+                    </li>
+
+                    <li>
+                        A deployed ids server. This is not necessary for deployment but it will be required subsequently to use the client.
+                    </li>
+
+                    <li>
+                        Python (version 2.4 to 2.7) installed on the server.
+                    </li>
+                </ul>
+            </subsection>
+
+            <subsection name="Summary of steps">
+                <ol>
+                    <li>
+                        Please follow
+                        <a href="http://code.google.com/p/icatproject/wiki/Installation"> the generic installation instructions</a>
+                    </li>
+
+                    <li>Check that it works.</li>
+                </ol>
+            </subsection>
+
+            <subsection name="Check that it works">
+                <p>
+                    The following should produce no output:
+                </p>
+                <p>
+                    <code>echo 'import ids;ids.IdsClient("https://&lt;hostname&gt;:8181").ping()' | python</code>
+                </p>
+                <p>In case of problems look in the server.log and the ids.log in the logs directory of your ids server.</p>
+            </subsection>
+
+        </section>
+
+        <section name="Manual Installation of Java client">
+
+            <p>There are two files that should be made available to those wishing
+                to use the IDS client:
+            </p>
+            <dl>
+                <dt>
+                    <a href="${repoUrl}/org/icatproject/ids.client/${project.version}/ids.client-${project.version}.jar">ids.client-${project.version}.jar</a>
+                </dt>
+                <dd>the client library which the user should add to the
+                    classpath.
+                </dd>
+                <dt>
+                    <a href="${repoUrl}/org/icatproject/ids.client/${project.version}/ids.client-${project.version}-sources.jar">ids.client-${project.version}-sources.jar</a>
+                </dt>
+                <dd>the source of the client library to which which the user may wish to refer.
+                </dd>
+
+            </dl>
+        </section>
+
+        <section name="Using the Java client from maven">
+            <p>It is expected that most people will express their dependency upon the icat.client by means of a maven pom file. To do this the
+                user
+                needs to define the repository and express the dependency as indicated in the snippet below:
+            </p>
+
+            <code>
+                &lt;repositories&gt;
+                <br />
+                &#160;&#160;&#160;&lt;repository&gt;
+                <br />
+                &#160;&#160;&#160;&#160;&#160;&#160;&lt;id&gt;ICAT Repo&lt;/id&gt;
+                <br />
+                &#160;&#160;&#160;&#160;&#160;&#160;&lt;url&gt;http://www.icatproject.org/mvn/repo&lt;/url&gt;
+                <br />
+                &#160;&#160;&#160;&lt;/repository&gt;
+                <br />
+                &#160;&#160;&#160;...
+                <br />
+                &lt;/repositories&gt;
+                <br />
+                <br />
+                &lt;dependencies&gt;
+                <br />
+                &#160;&#160;&#160;&lt;dependency&gt;
+                <br />
+                &#160;&#160;&#160;&#160;&#160;&#160;&lt;groupId&gt;org.icatproject&lt;/groupId&gt;
+                <br />
+                &#160;&#160;&#160;&#160;&#160;&#160;&lt;artifactId&gt;ids.client&lt;/artifactId&gt;
+                <br />
+                &#160;&#160;&#160;&#160;&#160;&#160;&lt;version&gt;${project.version}&lt;/version&gt;
+                <br />
+                &#160;&#160;&#160;&lt;/dependency&gt;
+                <br />
+                &#160;&#160;&#160;...
+                <br />
+                &lt;/dependencies&gt;
+            </code>
+        </section>
+
     </body>
 </document>
 			
